loki/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-service
spec:
  ports:
    - port: 80
      targetPort: 3100
  selector:
    app: loki
  sessionAffinity: None
  type: LoadBalancer
